[add] Goods page

--- a/files/goods_list.htm
+++ b/files/goods_list.htm
@@ -544,7 +544,7 @@
 							{% IFNOT SETTINGS_OPINION_DISABLE %}
 							<div class="product__ratings flex {% IF index_page_sale_goods.OPINION_RATING_VALUE %}has-rating{% ENDIF %}">
 								<div class="product__ratings-icon">
-									<i class="icon-star"></i>
+									<i class="icon-star2"></i>
 								</div>
 								<div class="product__ratings-value">
 									{% IF index_page_sale_goods.OPINION_RATING_VALUE %}
