--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -322,6 +322,7 @@
 							<input type="hidden" name="orderSumDefaul" value="{CART_SUM_NOW}">
 							<input class="coupon__code form__input" type="text" name="form[coupon_code]" value="{ORDER_FORM_COUPON_CODE}" placeholder="Введите код"/>
 							<a href="javascript:void(0)" class="coupon__button button" title="Применить">
+								<i class="icon-check"></i>
 								<span>Применить</span>
 							</a>
 							<a href="javascript:void(0)" class="coupon__reset" title="Сбросить"></a>
