--- a/files/feedback.htm
+++ b/files/feedback.htm
@@ -92,7 +92,7 @@
 					itemprop="address"
 					itemscope
 					itemtype="https://schema.org/PostalAddress">
-					<div class="contacts__block-icon"><i class="icon-address"></i></div>
+					<div class="contacts__block-icon"><i class="icon-location"></i></div>
 					<div class="contacts__block-content">
 						<a class="contacts__block-link" href="https://yandex.ru/maps/?text={SETTINGS_STORE_REGION}&z=17" target="_blank">
 							<span itemprop="addressLocality">{SETTINGS_STORE_REGION}</span>
@@ -104,7 +104,7 @@
 				<!-- Время работы -->
 				{% IF SETTINGS_STORE_WORK_TIME %}
 				<div class="contacts__block worktime flex">
-					<div class="contacts__block-icon"><i class="icon-time"></i></div>
+					<div class="contacts__block-icon"><i class="icon-clock"></i></div>
 					<div class="contacts__block-content">
 						<a class="contacts__block-link work" href="{FEEDBACK_URL}" title="Режим работы">
 							<span>{SETTINGS_STORE_WORK_TIME}</span>
