--- a/files/discount_list.htm
+++ b/files/discount_list.htm
@@ -3,33 +3,68 @@
 {% ELSE %}
 <!-- Список акций -->
 <div class="products__container">
-	<div class="row">
-	  <div class="products__grid promotion__grid">
-	  {% FOR promotion_campaign %}
-	  <div class="promotion__item product__item {% IFNOT promotion_campaign.IS_WORK %}promotion__empty{% ENDIF %}" data-id="{promotion_campaign.ID}">
-			<div class="product__form-{promotion_campaign.ID}">
-				<div class="promotion__percentage">
-					<span>- {promotion_campaign.PERCENTAGE}%</span>
-				</div>
-				<a class="promotion__name" href="{promotion_campaign.URL | url_amp}" title="{promotion_campaign.NAME}">
-					<span>{promotion_campaign.NAME}</span>
-				</a>
-				<div class="promotion__date">
-					{% IF promotion_campaign.IS_WORK %}
-					<span>Действует</span>
-					<span>с {promotion_campaign.BEGINNING_TIME | date('d.m.Y')}</span>
-					<span>по {promotion_campaign.EXPIRED_TIME | date('d.m.Y')}</span>
-					{% ELSE %}
-					<span>Акция закончилась</span>
-					{% ENDIF %}
-				</div>
-				<a class="promotion__more" href="{promotion_campaign.URL | url_amp}" title="{promotion_campaign.NAME}">
-					<span>Подробнее</span>
-				</a>
+	<div class="products__grid promotion__grid">
+	{% FOR promotion_campaign %}
+	<div class="promotion__item product__item {% IFNOT promotion_campaign.IS_WORK %}promotion__empty{% ENDIF %}" data-id="{promotion_campaign.ID}">
+		<div class="product__form-{promotion_campaign.ID}">
+			<div class="promotion__percentage flex-center pulse2">
+				<span>- {promotion_campaign.PERCENTAGE}%</span>
 			</div>
-	  </div>
-	  {% ENDFOR promotion_campaign %}
-	  </div>
+			<a class="promotion__name" href="{promotion_campaign.URL | url_amp}" title="{promotion_campaign.NAME}">
+				<span>{promotion_campaign.NAME}</span>
+			</a>
+			{% IF promotion_campaign.DESCRIPTION_SHORT %}
+			<div class="promotion__desc">
+				<span>{promotion_campaign.DESCRIPTION_SHORT}</span>
+			</div>
+			{% ENDIF %}				
+			<!-- Обратный отсчет акции -->
+			<div class="product__counter flex">
+				<div class="product__counter-icon">
+					<i class="icon-timer"></i>
+				</div>
+				<div class="product__counter-content">
+					<div class="counter flex" end="{promotion_campaign.EXPIRED_TIME | date('m/d/Y H:i:s')}" now="{CURRENT_TIME | date('m/d/Y H:i:s')}">
+						<div class="days flex">
+							<span>00</span>
+							<label>д</label>
+						</div>
+						<div class="separator">:</div>
+						<div class="hours flex">
+							<span>00</span>
+							<label>ч</label>
+						</div>
+						<div class="separator">:</div>
+						<div class="minutes flex">
+							<span>00</span>
+							<label>м</label>
+						</div>
+						<div class="separator">:</div>
+						<div class="seconds flex">
+							<span>00</span>
+							<label>с</label>
+						</div>
+					</div>
+					<div class="counter__animate-line">
+						<div class="counter__animate-line-progress"></div>
+					</div>
+				</div>
+			</div>
+			<!-- <div class="promotion__date">
+				{% IF promotion_campaign.IS_WORK %}
+				<span>Действует</span>
+				<span>с {promotion_campaign.BEGINNING_TIME | date('d.m.Y')}</span>
+				<span>по {promotion_campaign.EXPIRED_TIME | date('d.m.Y')}</span>
+				{% ELSE %}
+				<span>Акция закончилась</span>
+				{% ENDIF %}
+			</div> -->
+			<!-- <a class="promotion__more" href="{promotion_campaign.URL | url_amp}" title="{promotion_campaign.NAME}">
+				<span>Подробнее</span>
+			</a> -->
+		</div>
+	</div>
+	{% ENDFOR promotion_campaign %}
 	</div>
 </div>
 {% ENDIF %}
