--- a/files/cart.htm
+++ b/files/cart.htm
@@ -2,6 +2,34 @@
   {% IF cart_items_empty %}
     <div class="attention">Корзина покупок пуста. Вы можете выбрать нужный товар из <a href="{CATALOG_URL}">каталога</a>.</div>
   {% ELSE %}
+		<!-- Корзина: Навигация -->
+		<div class="cartNav flex-center">
+			<div class="cartNav__item flex first-stage">
+				<div class="cartNav__icon active flex-center">
+					<i class="icon-cart"></i>
+				</div>
+				<div class="cartNav__content"><span>Корзина</span></div>
+			</div>
+			<div class="cartNav__separator active">
+				<i class="icon-arrow_right"></i>
+			</div>
+			<div class="cartNav__item flex second-stage">
+				<div class="cartNav__icon flex-center">
+					<i class="icon-pen"></i>
+				</div>
+				<div class="cartNav__content"><span>Оформление</span></div>
+			</div>
+			<div class="cartNav__separator">
+				<i class="icon-arrow_right"></i>
+			</div>
+			<div class="cartNav__item flex third-stage">
+				<div class="cartNav__icon flex-center">
+					<i class="icon-check"></i>
+				</div>
+				<div class="cartNav__content"><span>Готово</span></div>
+			</div>
+		</div>
+
 		<!-- Корзина: Основной блок -->
 		<div class="cartTable">
 			<div class="cartTable__top flex">
@@ -116,7 +144,7 @@
 					<!-- Скидки, действующие на заказ -->
 					{% FOR cart_discount %}
 					{% IF cart_discount.DISCOUNT_IS_ENABLED %}
-					<div class="total__item total__discount">
+					<div class="total__item total__discount flex justify-between">
 						<span class="total__label"><span>{cart_discount.DISCOUNT_NAME}:</span></span>
 						<span class="total__price"><span class="discount__value" data-value="{cart_discount.DISCOUNT_VALUE}">{cart_discount.DISCOUNT_VALUE}</span>{% IF cart_discount.IS_PERCENT %}<span class="percent">%</span>{% ELSE %}<span class="rub"> руб.</span>{% ENDIF %}</span>
 					</div>
@@ -176,54 +204,33 @@
 					<!-- Изображение -->
 					<a class="product__img flex-center" href="{cart_related_goods.URL_MIN_PRICE_NOW | url_amp}" title="{cart_related_goods.NAME}" itemprop="url">
 						<noscript>
-							<img class="goods-image-medium" src="{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{cart_related_goods.NAME}" />
+							<img src="{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{cart_related_goods.NAME}" />
 						</noscript>
-						<img class="goods-image-medium lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=THEMENAME" data-src="{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{cart_related_goods.NAME}" />
+						<img class="lozad script__on" src="{ASSETS_IMAGES_PATH}placeholder.png?design=THEMENAME" data-src="{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo.png?design=THEMENAME{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}" alt="{cart_related_goods.NAME}" />
 					</a>
-				</div><!-- //END Изображение товара -->
-				<!-- Информация товара -->
-				<div class="product__shop">
+
 					<!-- Стикеры -->
-					<div class="product__ico flex">
-						{% IF cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT > cart_related_goods.MIN_PRICE_NOW %}
-						<span class="ico__sales"></span>
-						{% ELSEIF cart_related_goods.MIN_PRICE_OLD > cart_related_goods.MIN_PRICE_NOW %}
-						<span class="ico__sales"></span>
-						{% ENDIF %}
+					<div class="product__ico">
 						{% IF cart_related_goods.IS_NEW %}
 						<span class="ico__new"></span>
 						{% ENDIF %}
 						{% IF cart_related_goods.IS_TOP %}
 						<span class="ico__best"></span>
 						{% ENDIF %}
-					</div>
-					<!-- Название товара -->
-					<a class="product__name" href="{cart_related_goods.URL_MIN_PRICE_NOW | url_amp}" title="{cart_related_goods.NAME}">
-						<span itemprop="name">{cart_related_goods.NAME}</span>
-					</a>
-					<!-- Артикул товара -->
-					<meta itemprop="sku" content="{cart_related_goods.ART_NUMBER}" />
-					<!-- Цена для поисковиков -->
-					<div itemprop="offers" itemscope itemtype="http://schema.org/AggregateOffer">
-						<meta itemprop="priceCurrency" content="{CURRENCY_CHAR_CODE}" />
-						<meta itemprop="lowPrice" content="{cart_related_goods.MIN_PRICE_NOW}">
-						<meta itemprop="highPrice" content="{cart_related_goods.MAX_PRICE_NOW}">
-						<meta itemprop="offerCount" content="{% FOR mods %}{% IF cart_related_goods.mods.last %}{cart_related_goods.mods.length}{% ENDIF %}{% ENDFOR %}">
-					</div>
-					<!-- Цена -->
-					<div class="product__price {CURRENCY_CHAR_CODE} {% IF cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT>cart_related_goods.MIN_PRICE_NOW %}has-oldPrice{% ELSEIF cart_related_goods.MIN_PRICE_OLD>cart_related_goods.MIN_PRICE_NOW %}has-oldPrice{% ENDIF %}" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-						<meta itemprop="priceCurrency" content="{CURRENCY_CHAR_CODE}" />
-						<meta itemprop="availability" content="{% IF cart_related_goods.MAX_REST_VALUE>0 %}http://schema.org/InStock{% ELSE %}http://schema.org/OutOfStock{% ENDIF %}" />
-						<meta itemprop="priceValidUntil" content="{cart_related_goods.MAX_DISCOUNT_EXPIRED_AT | date('Y-m-d')}" />
-						<span class="price__now {CURRENCY_CHAR_CODE}" itemprop="price" content="{cart_related_goods.MIN_PRICE_NOW}">{cart_related_goods.MIN_PRICE_NOW | money_format}</span>
-						{% IF cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT>cart_related_goods.MIN_PRICE_NOW %}
-						<span class="price__old {CURRENCY_CHAR_CODE}">{cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT | money_format}</span>
-						{% ELSEIF cart_related_goods.MIN_PRICE_OLD>cart_related_goods.MIN_PRICE_NOW %}
-						<span class="price__old {CURRENCY_CHAR_CODE}">{cart_related_goods.MIN_PRICE_OLD | money_format}</span>
+						{% IF cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT > cart_related_goods.MIN_PRICE_NOW %}
+						<span class="ico__sale"></span>
+						{% ELSEIF cart_related_goods.MIN_PRICE_OLD > cart_related_goods.MIN_PRICE_NOW %}
+						<span class="ico__sale"></span>
 						{% ENDIF %}
 					</div>
+
+					<!-- Быстрый просмотр -->
+					<a class="quickview" href="{cart_related_goods.URL_MIN_PRICE_NOW | url_amp}" title="{cart_related_goods.NAME}">
+						<i class="icon-loupe"></i>
+					</a>
+
 					<!-- Добавление товара в избранное и сравнение и в корзину -->
-					<div class="product__links flex justify-between {% IF cart_related_goods.IS_HAS_IN_COMPARE_LIST || cart_related_goods.IS_HAS_IN_FAVORITES_LIST %}added{% ENDIF %}">
+					<div class="product__links flex {% IF cart_related_goods.IS_HAS_IN_COMPARE_LIST || cart_related_goods.IS_HAS_IN_FAVORITES_LIST %}added{% ENDIF %}">
 						<!-- Если в тарифном плане подключен модуль сравнения товаров и он не выключен в настройках магазина -->
 						{% IFNOT SETTINGS_COMPARE_DISABLE && cart_related_goods.IS_HAS_IN_COMPARE_LIST %}
 						<a class="add-compare added"
@@ -271,30 +278,37 @@
 						></a>
 						{% ENDIF %}
 						<!-- //END Добавление товара в избранное и сравнение и в корзину -->
-						<!-- Добавление в корзину -->
-						{% IF SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE && cart_related_goods.MAX_REST_VALUE=0 %}
-						<a class="add-notify"
-							title="Уведомить"
-							data-tooltipOFF="Уведомить"
-							rel="nofollow"
-							data-fancybox
-							data-src="#fancybox__notify"
-							href="javascript:;"
-							data-name="{cart_related_goods.NAME}"
-							data-art="{cart_related_goods.ART_NUMBER}"
-						>												
-							<i class="icon-notify"></i>
-						</a>
-						{% ELSE %}
-						<a class="{% IF cart_related_goods.COUNT_MODIFICATION > 1 %}add-mod{% ELSE %}add-cart{% ENDIF %}"
-							title="Добавить в корзину &laquo;{cart_related_goods.NAME}&raquo;"
-							data-tooltipOFF="В корзину"
-							rel="nofollow"
-							href="{% IF cart_related_goods.COUNT_MODIFICATION > 1 %}{cart_related_goods.URL_MIN_PRICE_NOW}{% ELSE %}{CART_ADD_GOODS_MODIFICATION_URL | url_amp}?hash={HASH | url_amp}&amp;form%5Bgoods_from%5D={cart_related_goods.GOODS_FROM}&amp;form%5Bgoods_mod_id%5D={cart_related_goods.MIN_PRICE_NOW_ID}{% ENDIF %}"
-						>
-							<i class="icon-cart"></i>
-						</a>
-						{% ENDIF %}
+						
+						<!-- Добавление товара в избранное и сравнение и в корзину -->
+						<div class="product__addCart {% IF cart_related_goods.IS_HAS_IN_COMPARE_LIST || cart_related_goods.IS_HAS_IN_FAVORITES_LIST %}added{% ENDIF %}">
+							<!-- Добавление в корзину -->
+							{% IF SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE && cart_related_goods.MAX_REST_VALUE=0 %}
+							<a class="add-notify"
+								title="Уведомить"
+								data-tooltipOFF="Уведомить"
+								rel="nofollow"
+								data-fancybox
+								data-src="#fancybox__notify"
+								href="javascript:;"
+								data-name="{cart_related_goods.NAME}"
+								data-art="{cart_related_goods.ART_NUMBER}"
+							>												
+								<i class="icon-notify"></i>
+								<span>Уведомить</span>
+							</a>
+							{% ELSE %}
+							<a class="{% IF cart_related_goods.COUNT_MODIFICATION > 1 %}add-mod{% ELSE %}add-cart{% ENDIF %}"
+								title="Добавить в корзину &laquo;{cart_related_goods.NAME}&raquo;"
+								data-tooltipOFF="В корзину"
+								rel="nofollow"
+								href="{% IF cart_related_goods.COUNT_MODIFICATION > 1 %}{cart_related_goods.URL_MIN_PRICE_NOW}{% ELSE %}{CART_ADD_GOODS_MODIFICATION_URL | url_amp}?hash={HASH | url_amp}&amp;form%5Bgoods_from%5D={cart_related_goods.GOODS_FROM}&amp;form%5Bgoods_mod_id%5D={cart_related_goods.MIN_PRICE_NOW_ID}{% ENDIF %}"
+							>
+								<i class="icon-cart"></i>
+								<span>Купить</span>
+							</a>
+							{% ENDIF %}
+						</div>
+						
 						<!-- Если есть возможность добавить товар в Избранное -->
 						{% IF cart_related_goods.IS_HAS_IN_FAVORITES_LIST %}
 						<a class="add-favorites added"
@@ -340,6 +354,44 @@
 							href="{FAVORITES_ADD_URL}?id={cart_related_goods.MIN_PRICE_NOW_ID}&amp;return_to={CURRENT_URL | urlencode}"
 							rel="nofollow"
 						></a>
+						{% ENDIF %}
+					</div>
+				</div><!-- //END Изображение товара -->
+				<!-- Информация товара -->
+				<div class="product__shop">
+					<!-- Доступность товара -->
+					<div class="product__available">
+						<span class="goodsModRestValue" data-value="{cart_related_goods.MAX_REST_VALUE}">
+							{% IF cart_related_goods.MAX_REST_VALUE > 0 %}
+								В наличии {% IF cart_related_goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+							{% ELSE %}
+								нет в наличии
+							{% ENDIF %}
+						</span>
+					</div>
+					<!-- Название товара -->
+					<a class="product__name flex-center" href="{cart_related_goods.URL_MIN_PRICE_NOW | url_amp}" title="{cart_related_goods.NAME}">
+						<span itemprop="name">{cart_related_goods.NAME}</span>
+					</a>
+					<!-- Артикул товара -->
+					<meta itemprop="sku" content="{cart_related_goods.ART_NUMBER}" />
+					<!-- Цена для поисковиков -->
+					<div itemprop="offers" itemscope itemtype="http://schema.org/AggregateOffer">
+						<meta itemprop="priceCurrency" content="{CURRENCY_CHAR_CODE}" />
+						<meta itemprop="lowPrice" content="{cart_related_goods.MIN_PRICE_NOW}">
+						<meta itemprop="highPrice" content="{cart_related_goods.MAX_PRICE_NOW}">
+						<meta itemprop="offerCount" content="{% FOR mods %}{% IF cart_related_goods.mods.last %}{cart_related_goods.mods.length}{% ENDIF %}{% ENDFOR %}">
+					</div>
+					<!-- Цена -->
+					<div class="product__price {CURRENCY_CHAR_CODE} {% IF cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT>cart_related_goods.MIN_PRICE_NOW %}has-oldPrice{% ELSEIF cart_related_goods.MIN_PRICE_OLD>cart_related_goods.MIN_PRICE_NOW %}has-oldPrice{% ENDIF %}" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
+						<meta itemprop="priceCurrency" content="{CURRENCY_CHAR_CODE}" />
+						<meta itemprop="availability" content="{% IF cart_related_goods.MAX_REST_VALUE>0 %}http://schema.org/InStock{% ELSE %}http://schema.org/OutOfStock{% ENDIF %}" />
+						<meta itemprop="priceValidUntil" content="{cart_related_goods.MAX_DISCOUNT_EXPIRED_AT | date('Y-m-d')}" />
+						<span class="price__now {CURRENCY_CHAR_CODE}" itemprop="price" content="{cart_related_goods.MIN_PRICE_NOW}">{cart_related_goods.MIN_PRICE_NOW | money_format}</span>
+						{% IF cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT>cart_related_goods.MIN_PRICE_NOW %}
+						<span class="price__old {CURRENCY_CHAR_CODE}">{cart_related_goods.MIN_PRICE_NOW_WITHOUT_DISCOUNT | money_format}</span>
+						{% ELSEIF cart_related_goods.MIN_PRICE_OLD>cart_related_goods.MIN_PRICE_NOW %}
+						<span class="price__old {CURRENCY_CHAR_CODE}">{cart_related_goods.MIN_PRICE_OLD | money_format}</span>
 						{% ENDIF %}
 					</div>
 				</div>
