--- a/files/goods.htm
+++ b/files/goods.htm
@@ -172,7 +172,7 @@
 									</select>
 								</div>
 								{% ENDIF %}
-								{% ENDFOR %}
+								{% ENDFOR values %}
 								{% FOR values %}
 								{% IF goods_modifications_properties.values.first %}
 								<div class="goodsModificationsValues flex" style="display: none">
