--- a/files/goods_list.htm
+++ b/files/goods_list.htm
@@ -31,7 +31,8 @@
 	<!-- Если нет товаров, либо у пользователя не сработало javascript ограничение на фильтре по товарам и так получилось что их не нашлось, отобразим блок изменяющий отображение данных выдачи товаров -->
 	{% IFNOT IS_FULL_CATALOG && goods_empty=0 || goods_filters_empty=0 %}	
 	<!-- Активные Фильтры -->
-	<div class="filtersActive {% FOR filter_attr_list %}{% FOR values %}{% IF filter_attr_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %} {% FOR filter_prop_list %}{% FOR values %}{% IF filter_prop_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %}">
+	{% IF SHOW_GOODS_PRICE_FILTERS || SHOW_GOODS_FILTERS %}
+	<div style="display: none;" class="filtersActive {% FOR filter_attr_list %}{% FOR values %}{% IF filter_attr_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %} {% FOR filter_prop_list %}{% FOR values %}{% IF filter_prop_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %}">
 		<!-- Фильтры по характеристикам товаров (Например: Производитель, разрешение экрана, заряд аккомулятора) -->
 		<div class="filtersActive__title flex">
 			<span class="filtersActive__span">Подберите товар:</span>
@@ -57,6 +58,112 @@
 		</div>
 		<!-- Фильтры по свойствам товарных модификаций (Например: Цвет, размер, модификация) -->
 	</div>
+	<!-- Если в тарифном плане подключен модуль фильтров по товарам -->
+	<div id="filters" class="filters">
+		<div class="filters__title flex justify-between">
+			<span class="filters__title-span">Подберите товар:</span>
+			<a class="filters__title-clear" href="{PAGE_CANONICAL}" title="Очистить фильры"><span>Сбросить фильтры</span></a>
+		</div>
+		<div class="filters__content {% FOR filter_attr_list %}{% FOR values %}{% IF filter_attr_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %} {% FOR filter_prop_list %}{% FOR values %}{% IF filter_prop_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %}">
+			<div class="row">
+				<form action="" method="get" class="form__filters flex">
+					<!-- Если есть возможность фильтрации товаров по ценам -->
+					{% IF SHOW_GOODS_PRICE_FILTERS %}
+					<div class="filter__list filters-price collapsible" style="display: none;">
+						<a class="filter__name collapsible__click" href="javascript:;">
+							<span>Цена</span>
+						</a>
+						<div class="filter__items collapsible__content">
+							<div class="priceSlider">
+								<input type="hidden" name="form[filter][available_price][min]" value="{GOODS_FILTER_MIN_AVAILABLE_PRICE}" />
+								<input type="hidden" name="form[filter][available_price][max]" value="{GOODS_FILTER_MAX_AVAILABLE_PRICE}" />
+								<!-- Ползунок фильтров по цене -->
+								<div id="goods-filter-price-slider"></div>
+								<!-- Фильтры по цене -->
+								<div class="goodsFilterPriceRangePointers flex justify-between">
+									<span class="min" style="display:none;">{GOODS_FILTER_MIN_AVAILABLE_PRICE}</span>
+									<span class="max" style="display:none;">{GOODS_FILTER_MAX_AVAILABLE_PRICE}</span>
+									<span>от</span>
+									<input id="goods-filter-min-price" class="inputText" type="text" name="form[filter][price][min]" value="{% IF GOODS_FILTER_MIN_PRICE %}{GOODS_FILTER_MIN_PRICE}{% ELSE %}{GOODS_FILTER_MIN_AVAILABLE_PRICE}{% ENDIF %}" min="1" onkeypress="return keyPress(this, event);" onpaste="return false;" />
+									<span>до</span>
+									<input id="goods-filter-max-price" class="inputText" type="text" name="form[filter][price][max]" value="{% IF GOODS_FILTER_MAX_PRICE %}{GOODS_FILTER_MAX_PRICE}{% ELSE %}{GOODS_FILTER_MAX_AVAILABLE_PRICE}{% ENDIF %}" min="1" onkeypress="return keyPress(this, event);" onpaste="return false;" />
+								</div>
+								<!-- Кнопки Фильтров -->
+								<div class="goodsFilterPriceSubmit flex-center">
+									<a class="button-secondary submit" onclick="$('.form__filters').submit();" title="Показать"><span>Применить</span></a>
+									<a class="clear" href="{PAGE_CANONICAL}" title="Очистить фильры"><span>Очистить</span></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					{% ENDIF %}
+					<!-- Фильтры по характеристикам товаров (Например: Производитель, разрешение экрана, заряд аккомулятора) {% FOR values %}{% IF filter_attr_list.values.CHECKED %}active {% ENDIF %}{% ENDFOR %} -->
+					{% FOR filter_attr_list %}
+					<div class="filter__list collapsible {% FOR values %}{% IF filter_attr_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}">
+						<div class="filter__content">
+							<a class="filter__name collapsible__click" href="javascript:;">
+								<span>{filter_attr_list.NAME}</span>
+							</a>
+							<div class="filter__values collapsible__click">
+								{% FOR values %}{% IF filter_attr_list.values.CHECKED %}<span>{filter_attr_list.values.VALUE}</span>{% ELSEIF filter_attr_list.values.NB_GOODS_FILTERED=0 %}{continue}{% ENDIF %}{% ENDFOR %}
+								<span class="filter__empty">не выбрано</span>
+							</div>
+							<div class="filters__clear" title="Очистить фильтры">
+								<i class="icon-close"></i>
+							</div>
+						</div>
+						<div class="collapsible__content">
+							<div class="filter__name">{filter_attr_list.NAME}</div>
+							<div class="filter__items">
+								{% FOR values %}
+								<div class="filter__item flex {% IF filter_attr_list.values.CHECKED %}checked{% ELSEIF filter_attr_list.values.NB_GOODS_FILTERED=0 %}disabled{% ENDIF %}">
+									<input type="checkbox" name="form[filter][attr][{filter_attr_list.ID}][{filter_attr_list.values.ID}]" value="1" id="filterAttrVal{filter_attr_list.values.ID}" class="square" {% IF filter_attr_list.values.CHECKED %}checked="checked" {% ELSEIF filter_attr_list.values.NB_GOODS_FILTERED=0 %}disabled="disabled" {% ENDIF %} />
+									<label for="filterAttrVal{filter_attr_list.values.ID}" data-name="{filter_attr_list.values.VALUE}">
+										<span>{filter_attr_list.values.VALUE}</span>
+										<!-- <span>({filter_attr_list.values.NB_GOODS_FILTERED})</span> -->
+									</label>
+								</div>
+								{% ENDFOR %}
+							</div>
+						</div>
+					</div>
+					{% ENDFOR %}
+					<!-- Фильтры по свойствам товарных модификаций (Например: Цвет, размер, модификация) {% FOR values %}{% IF filter_prop_list.values.CHECKED %}active {% ENDIF %}{% ENDFOR %} -->
+					{% FOR filter_prop_list %}
+					<div class="filter__list collapsible {% FOR values %}{% IF filter_prop_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}">
+						<div class="filter__content collapsible__click">
+							<a class="filter__name" href="javascript:;">
+								<span>{filter_prop_list.NAME}</span>
+							</a>
+							<div class="filter__values collapsible__click">
+								{% FOR values %}{% IF filter_prop_list.values.CHECKED %}<span>{filter_prop_list.values.VALUE}</span>{% ELSEIF filter_prop_list.values.NB_GOODS_FILTERED=0 %}{continue}{% ENDIF %}{% ENDFOR %}
+								<span class="filter__empty">не выбрано</span>
+							</div>
+							<div class="filters__clear" title="Очистить фильтры">
+								<i class="icon-close"></i>
+							</div>
+						</div>
+						<div class="collapsible__content">
+							<div class="filter__name">{filter_prop_list.NAME}</div>
+							<div class="filter__items">
+								{% FOR values %}
+								<div class="filter__item flex {% IF filter_prop_list.values.CHECKED %}checked{% ELSEIF filter_prop_list.values.NB_GOODS_FILTERED=0 %}disabled{% ENDIF %}">
+									<input type="checkbox" name="form[filter][attr][{filter_prop_list.ID}][{filter_prop_list.values.ID}]" value="1" id="filterAttrVal{filter_prop_list.values.ID}" class="square" {% IF filter_prop_list.values.CHECKED %}checked="checked" {% ELSEIF filter_prop_list.values.NB_GOODS_FILTERED=0 %}disabled="disabled" {% ENDIF %} />
+									<label for="filterAttrVal{filter_prop_list.values.ID}" data-name="{filter_prop_list.values.VALUE}">
+										<span>{filter_prop_list.values.VALUE}</span>
+										<!-- <span>({filter_prop_list.values.NB_GOODS_FILTERED})</span> -->
+									</label>
+								</div>
+								{% ENDFOR %}
+							</div>
+						</div>
+					</div>
+					{% ENDFOR %}
+				</form>
+			</div>
+		</div>
+	</div>
+	{% ENDIF %}
 	<!-- Верхний блок, изменяющий отображение данных выдачи товаров -->
 	<div class="toolbar {% FOR filter_attr_list %}{% FOR values %}{% IF filter_attr_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %} {% FOR filter_prop_list %}{% FOR values %}{% IF filter_prop_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %}">
 		<form action="" class="form__toolbar flex">
