--- a/files/order.htm
+++ b/files/order.htm
@@ -195,16 +195,26 @@
           {% ENDIF %}
           <!-- Если поле даты доставки запрашивается -->
           {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME < 3 %}
-	        <div class="form__fields two flex">
+          <div class="form__fields {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}required{% ENDIF %}">
             <div class="form__field">
-              <label for="deliveryConvenientDate" {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}class="required"{% ENDIF %}>Дата доставки <em>*</em></label>
+              <label for="deliveryConvenientDate"><span>Дата доставки</span>{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
               <input id="deliveryConvenientDate" type="text" name="form[delivery][convenient_date]" value="{ORDER_FORM_DELIVERY_CONVENIENT_DATE}" class="form__input" maxlength="10" minlength="10" placeholder="17.11.19" {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}required{% ENDIF %} />
             </div>
-            <div class="form__field deliveryConvenientDate">
-              <label for="deliveryConvenientDate" {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}class="required"{% ENDIF %}>Время доставки{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
-              <select class="form__select" name="form[delivery][convenient_time_to]">
+          </div>
+	        <div class="form__fields two flex">
+            <div class="form__field deliveryConvenientDate selectBox {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}required{% ENDIF %}">
+              <label for="deliveryConvenientDate"><span>Время доставки</span>{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
+              <select class="form__input select" name="form[delivery][convenient_time_from]">
+                {% FOR convenient_time_from_list %}
+                <option value="{convenient_time_from_list.HOUR_INT}" {% IF convenient_time_from_list.SELECTED %}selected="selected"{% ENDIF %}>{convenient_time_from_list.HOUR}</option>
+                {% ENDFOR %}
+              </select>
+            </div>
+            <div class="form__field deliveryConvenientDate selectBox {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}required{% ENDIF %}">
+              <label for="deliveryConvenientDate"><span>Время доставки</span>{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
+              <select class="form__input select" name="form[delivery][convenient_time_to]">
                 {% FOR convenient_time_to_list %}
-                  <option value="{convenient_time_to_list.HOUR_INT}" {% IF convenient_time_to_list.SELECTED %}selected="selected"{% ENDIF %}>{convenient_time_to_list.HOUR}</option>
+                <option value="{convenient_time_to_list.HOUR_INT}" {% IF convenient_time_to_list.SELECTED %}selected="selected"{% ENDIF %}>{convenient_time_to_list.HOUR}</option>
                 {% ENDFOR %}
               </select>
             </div>
