--- a/files/html.htm
+++ b/files/html.htm
@@ -2346,6 +2346,7 @@
 			<!-- Скрытое обновление корзины -->
 			<div class="hiddenUpdate" style="display: none;"></div>
 
+			<!-- Выпадающее меню -->
 			<div class="menu__dropdown">
 				<div class="menu__label">
 					<span>Меню</span>
